spacing corrected on homepage search form

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -131,7 +131,7 @@
 }
 
 #homepage-search.location-not-set form {
-  padding-left: 16em;
+  padding-left: 18em;
   width: auto;
 }
 
